common/force-app/main/default/objects/Payment_Log__c/Payment_Log__c.object-meta.xml
<CustomObject>
    <label>Payment Log</label>
    <nameField>
        <label>Payment Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>