common/force-app/main/default/objects/Payment_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account associated with the payment.</description>
    <inlineHelpText>The account associated with the payment.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Logs</relationshipLabel>
    <relationshipName>Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>