common/force-app/main/default/objects/Payment_Log__c/fields/Anomaly_Flag__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if an anomaly was detected.</description>
    <inlineHelpText>Flag to indicate if an anomaly was detected.</inlineHelpText>
    <label>Anomaly Flag</label>
    <type>Checkbox</type>
</CustomField>