common/force-app/main/default/objects/Payment_Log__c/fields/API_Reponse__c.field-meta.xml
<CustomField>
    <fullName>API_Reponse__c</fullName>
    <label>API Reponse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>