common/force-app/main/default/objects/Payment_Log__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Error code returned by the payment gateway (if applicable).</description>
    <inlineHelpText>Error code returned by the payment gateway (if applicable).</inlineHelpText>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>