common/force-app/main/default/objects/Payment_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Detailed error message (if applicable).</description>
    <inlineHelpText>Detailed error message (if applicable).</inlineHelpText>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>