common/force-app/main/default/objects/Payment_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Opportunity.</description>
    <inlineHelpText>The related Opportunity.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payment Logs</relationshipLabel>
    <relationshipName>Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>