common/force-app/main/default/objects/Payment_Log__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>The amount involved in the transaction.</description>
    <inlineHelpText>The amount involved in the transaction.</inlineHelpText>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>