common/force-app/main/default/objects/Payment_Log__c/fields/Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment record associated</description>
    <inlineHelpText>The payment record associated</inlineHelpText>
    <label>Payment ID</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payment Logs</relationshipLabel>
    <relationshipName>Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>