common/force-app/main/default/objects/Payment_Log__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Status of the payment</description>
    <inlineHelpText>Status of the payment</inlineHelpText>
    <label>Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>