common/force-app/main/default/objects/Payment_Log__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>Number of retry attempts (if applicable).</description>
    <inlineHelpText>Number of retry attempts (if applicable).</inlineHelpText>
    <label>Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>