common/force-app/main/default/objects/Payment_Log__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Session associated</description>
    <inlineHelpText>The Payment Session associated</inlineHelpText>
    <label>Session ID</label>
    <referenceTo>Payment_Session__c</referenceTo>
    <relationshipLabel>Payment Logs</relationshipLabel>
    <relationshipName>Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>