common/force-app/main/default/objects/Payment_Log__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Unique identifier for each payment transaction.</description>
    <inlineHelpText>Unique identifier for each payment transaction.</inlineHelpText>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>