common/force-app/main/default/objects/Payment_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user associated with the payment.</description>
    <inlineHelpText>The user associated with the payment.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>